Squashed commit of the following:
commit 44477b5346af981d95cd64a89dd26e1abd66d493
Author: jra-se <192100093+jra-se@users.noreply.github.com>
Date:   Mon Aug 10 13:45:06 2026 +0200

    Java language upgrade (#351)

    * apply modern java and cleanup implementation in monticore-grammar

    * apply even more modern java and cleanup some more implementation in monticore-grammar

    * apply modern java and cleanup implementation in monticore-runtime

    * apply modern java and cleanup implementation in monticore-generator

    * apply modern java and cleanup implementation in monticore-test/it

    * add missing dependency to monticore-grammar-emf

    * even more cleanup

    * fix test

    * fix traverser

    * revert PrintHelp.ftl

    * revert emf namespace uri to http as most tools stick to that to ensure backwards compatibility

    * optimize switch case formatting

    * apply review

    * apply review

    * add missing import

    * Flos wishes...

    * spaces

    * minor formatting

commit c86664d72ba931a912f76eda321643b2e875d3c8
Author: David Schmalzing <77055785+schmalzing@users.noreply.github.com>
Date:   Fri Aug 7 16:25:58 2026 +0200

    Delete outdated

commit a9de868a13de851115425bbd33894480473a3e35
Author: Florian Drux <88034434+SE-FDr@users.noreply.github.com>
Date:   Thu Aug 6 14:40:18 2026 +0200

    type compatibility for tuple, functions (#357)

    * type compatibility for tuple, functions
    * SymTypeCompatibilityCalculator – further cleanup

commit 47498e91f7e5d7fde8644e7bc1dce0b8f6d0aced
Author: jra-se <192100093+jra-se@users.noreply.github.com>
Date:   Thu Aug 6 12:46:45 2026 +0200

    Refactor monticore-test:it (#352)

    * refactor monticore-test:it

    * fix GrammarExtensionOnceTest

    * also upgrade emf it-tests

    * fix ParserTest

    * remove spaces

    * parameterized Expression4Test

commit f102501da439a7a22773850d9bd5d36b12bbab71
Author: Florian Drux <88034434+SE-FDr@users.noreply.github.com>
Date:   Wed Aug 5 16: