@@ -93,7 +93,7 @@ public class ScopeClassDecorator extends AbstractDecorator {
             .stream()
             .map(ASTCDClass::getCDAttributeList)
             .flatMap(List::stream)
-            .map(a -> a.deepClone())
+            .map(ASTCDAttribute::deepClone)
             .collect(Collectors.toList());
     scopeRuleAttributeList
         .forEach(a -> getDecorationHelper().addAttributeDefaultValues(a, this.glex));
@@ -103,7 +103,7 @@ public class ScopeClassDecorator extends AbstractDecorator {
             .stream()
             .map(ASTCDClass::getCDMethodList)
             .flatMap(List::stream)
-            .map(a -> a.deepClone())
+            .map(ASTCDMethod::deepClone)
             .collect(Collectors.toList());
     for (ASTCDMethod meth: scopeRuleMethodList) {
       if (symbolTableService.isMethodBodyPresent(meth)) {
@@ -157,7 +157,7 @@ public class ScopeClassDecorator extends AbstractDecorator {
             .stream()
             .filter(ASTCDClass::isPresentCDExtendUsage)
             .findFirst()
-            .map(c -> c.deepClone());
+            .map(ASTCDClass::deepClone);
 
     List<ASTCDMethod> resolveSubKindsMethods = createResolveSubKindsNameMethods(symbolInput.getCDDefinition());
 
@@ -191,9 +191,8 @@ public class ScopeClassDecorator extends AbstractDecorator {
         .addAllCDMembers(createSubScopeMethods(scopeInterfaceType))
         .addAllCDMembers(createSuperScopeMethods(symbolTableService.getScopeInterfaceFullName()))
         .addAllCDMembers(resolveSubKindsMethods);
-    if (scopeRuleSuperClass.isPresent()) {
-      builder.setCDExtendUsage(scopeRuleSuperClass.get().getCDExtendUsage().deepClone());
-    }
+    scopeRuleSuperClass.ifPresent(
+        astcdClass -> builder.setCDExtendUsage(astcdClass.getCDExtendUsage().deepClone()));
     ASTCDClass clazz = builder.build();
 
     clazz.addCDMember(createAcceptTraverserMethod(clazz));
@@ -426,7 +425,7 @@ public class ScopeClassDecorator extends AbstractDecorator {
     mutatorDecorator.enableTemplates();
     // only one setter, because the attribute is mandatory
     if (mutatorMethods.size() == 1) {
-      this.replaceTemplate(EMPTY_BODY, mutatorMethods.get(0),
+      this.replaceTemplate(EMPTY_BODY, mutatorMethods.getFirst(),
           new TemplateHookPoint(TEMPLATE_PATH + "SetEnclosingScope"));
     }
     enclosingScopeMethods.addAll(mutatorMethods);
