@@ -7,10 +7,7 @@ import de.monticore.cd4analysis.CD4AnalysisMill;
 import de.monticore.cd4code.CD4CodeMill;
 import de.monticore.cd4codebasis._ast.ASTCDMethod;
 import de.monticore.cd4codebasis._ast.ASTCDParameter;
-import de.monticore.cdbasis._ast.ASTCDAttribute;
-import de.monticore.cdbasis._ast.ASTCDClass;
-import de.monticore.cdbasis._ast.ASTCDCompilationUnit;
-import de.monticore.cdbasis._ast.ASTCDType;
+import de.monticore.cdbasis._ast.*;
 import de.monticore.cdbasis._symboltable.CDTypeSymbol;
 import de.monticore.cdinterfaceandenum._ast.ASTCDInterface;
 import de.monticore.codegen.cd2java.AbstractDecorator;
@@ -95,14 +92,14 @@ public class ScopeInterfaceDecorator extends AbstractDecorator {
             .stream()
             .map(ASTCDClass::getCDAttributeList)
             .flatMap(List::stream)
-            .map(a -> a.deepClone())
-            .collect(Collectors.toList());
+            .map(ASTCDAttribute::deepClone)
+            .toList();
 
     List<ASTCDMethod> scopeRuleMethodList = scopeInput.deepClone().getCDDefinition().getCDClassesList()
             .stream()
             .map(ASTCDClass::getCDMethodList)
             .flatMap(List::stream)
-            .map(a -> a.deepClone())
+            .map(ASTCDMethod::deepClone)
             .collect(Collectors.toList());
     scopeRuleMethodList.forEach(m -> m.getModifier().setAbstract(true));
 
@@ -126,7 +123,7 @@ public class ScopeInterfaceDecorator extends AbstractDecorator {
             .stream()
             .map(ASTCDClass::getInterfaceList)
             .flatMap(List::stream)
-            .map(a -> a.deepClone())
+            .map(ASTMCObjectType::deepClone)
             .collect(Collectors.toList());
 
     Set<String> symbolAttributes = createSymbolAttributesNames(symbolInput.getCDDefinition().getCDClassesList(), symbolTableService.getCDSymbol());
@@ -592,7 +589,7 @@ public class ScopeInterfaceDecorator extends AbstractDecorator {
       for (CDTypeSymbol type : symbolTableService.getAllCDTypes(cdDefinitionSymbol)) {
         if (type.isPresentAstNode() && symbolTableService.hasSymbolStereotype(type.getAstNode().getModifier())) {
           Optional<String> symbolAttribute = createSymbolAttributeName(type.getAstNode());
-          symbolAttribute.ifPresent(attrName -> symbolAttributes.add(attrName));
+          symbolAttribute.ifPresent(symbolAttributes::add);
         }
       }
     }
@@ -603,7 +600,7 @@ public class ScopeInterfaceDecorator extends AbstractDecorator {
     Set<String> symbolAttributeList = new LinkedHashSet<>();
     for (ASTCDType astcdClass : symbolClassList) {
       Optional<String> attributeNames = createSymbolAttributeName(astcdClass);
-      attributeNames.ifPresent(attrName -> symbolAttributeList.add(attrName));
+      attributeNames.ifPresent(symbolAttributeList::add);
     }
     return symbolAttributeList;
   }
